Fix grid spacing

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
 
 .grid {
     display: grid;
-    gap: 0.75rem;
+    gap: 1.5vh;
     grid-template-columns: 1fr 1fr 12vh;
 }
 
